content/static/scripts/css/mainNew.css
@import url('https://fonts.googleapis.com/css?family=Comfortaa:300,400,700');

/* general styles */
html, body {
    height: 100%;
    width: 100%;
}
.navbar {
    background-color: #7D7769;
    color: #FFFFFF
}
.navbar a {
    color: #FFFFFF
}
.navbar-default .navbar-nav>li>a {
  color: #FFFFFF;
}
.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover
{
    background-color: transparent;
    color: #65A8A6;
}
/* padded section */
.pad-section {
    padding: 50px 0;
}
.pad-section img {
    width: 100%;
}
.parallax1 {
    /* The image used */
    background-image: url("/images/backgroundLightSmall.png");

    /* Set a specific height */
    min-height: 300px; 

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}
/* vertical-centered text */
.text-vcenter {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}
.text-vcenter h1 {
    font-size: 4.5em;
    font-weight: 700;
    margin: 0;
    padding: 0;
}
/* additional sections */
#home {
    /*background: url(/images/pawns.jpg) no-repeat center center fixed;*/
    background-color: #F8EBC2;
    display: table;
    height: 100%;
    position: relative;
    width: 100%;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
#about {
}
#services, #sponsors {
    background-color: #65A8A6;
    color: #ffffff;
}
#services .glyphicon {
    border: 2px solid #FFFFFF;
    border-radius: 50%;
    display: inline-block;
    font-size: 60px;
    height: 140px;
    line-height: 140px;
    text-align: center;
    vertical-align: middle;
    width: 140px;
}
#information {
    background: url(/images/pawns.jpg) no-repeat center center fixed;
    display: table;
    height: 800px;
    position: relative;
    width: 100%;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
#information .panel {
    opacity: 0.85;
}
#google_map {
    height: 500px;
}
#mainLogo {
    width: 500px;
    text-align: center;
}
footer {
    padding: 20px 0;
}
footer .glyphicon {
    color: #333333;
    font-size: 60px;
}
footer .glyphicon:hover {
    color: #306d9f;
}
h1, h2 {
    font-family: "Comfortaa"
}
h3, h4 {
    font-family: "Comfortaa light"
}
p {
    font-family: "Roboto"
}

